use secure memory to store passwords
Fixes #179

Signed-off-by: Marc-Antoine Perennou <Marc-Antoine@Perennou.com>

--- a/configure.ac
+++ b/configure.ac
@@ -28,6 +28,7 @@ m4_define([gtk_api_required],    [G_ENCODE_VERSION(gtk_major_required, gtk_minor
 m4_define([gtk_required],        [gtk_major_required.gtk_minor_required.0])
 
 # Other dependencies
+m4_define([gcr_required],        [3.20.0])
 m4_define([gdk_pixbuf_required], [2.26.0])
 m4_define([gir_required],        [1.50.0])
 m4_define([vala_required],       [0.32])
@@ -103,6 +104,7 @@ PKG_INSTALLDIR
 PKG_CHECK_MODULES(GLIB,       [glib-2.0 >= glib_required gobject-2.0 >= glib_required gio-2.0 >= glib_required])
 PKG_CHECK_MODULES(GTK,        [gdk-3.0 >= gtk_required gtk+-3.0 >= gtk_required pango])
 PKG_CHECK_MODULES(GDK_PIXBUF, [gdk-pixbuf-2.0 >= gdk_pixbuf_required])
+PKG_CHECK_MODULES(GCR,        [gcr-base-3 >= gcr_required])
 PKG_CHECK_MODULES(X11,        [x11 xi])
 PKG_CHECK_MODULES(APPSTREAM,  [appstream-glib])
 
